--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BER Haber</title>
+    <title>GÜVENİLİR HABER</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">
@@ -169,16 +169,16 @@
     <div class="arkaplan alt-kenar-10">
         <div class="ust kapsayici">
             <div class="logo">
-                <h1>BER HABER</h1>
-                <h2>www.berhaber.tk</h2>
+                <h1>GÜVENİLİR HABER</h1>
+                <h2>www.güvenilirhaber.io</h2>
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="#">TEKNOLOJİ HABERLERİ</a></li>
-                    <a href="https://www.dw.com/">SON DAKİKA</a>
-                    <li><a href="#">SPOR HABERLERİ</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
+                    <a href="https://www.dw.com/">ALMANYA</a>
+                    <a href="https://www.bbc.com/">AMERİKA</a>
+                    <a href="https://tr.euronews.com/">İNGİLTERE</a>
+                    <a href="https://www.lefigaro.fr/">FRANSA</a>
+                    <a href="https://iz.ru/">RUSYA</a>
                 </ul>
             </div>
         </div>
@@ -266,38 +266,38 @@
         <div class="alt kapsayici">
             <div class="baglanti">
                 <ul>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
+                    <li><a href="#">AMERİKA</a></li>
+                    <li><a href="#">Teknoloji</a></li>
+                    <li><a href="#">Spor</a></li>
+                    <li><a href="#">Sağlık</a></li>
+                    <li><a href="#">Gündem</a></li>
                 </ul>
             </div>
             <div class="baglanti">
                 <ul>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
+                    <li><a href="#">ALMANYA</a></li>
+                    <li><a href="#">Teknoloji</a></li>
+                    <li><a href="#">Spor</a></li>
+                    <li><a href="#">Sağlık</a></li>
+                    <li><a href="#">Gündem</a></li>
                 </ul>
             </div>
             <div class="baglanti">
                 <ul>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
+                    <li><a href="#">İNGİLTERE</a></li>
+                    <li><a href="#">Teknoloji</a></li>
+                    <li><a href="#">Spor</a></li>
+                    <li><a href="#">Sağlık</a></li>
+                    <li><a href="#">Gündem</a></li>
                 </ul>
             </div>
             <div class="baglanti">
                 <ul>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
-                    <li><a href="#">Sayfa</a></li>
+                    <li><a href="#">FRANSA</a></li>
+                    <li><a href="#">Teknoloji</a></li>
+                    <li><a href="#">Spor</a></li>
+                    <li><a href="#">Sağlık</a></li>
+                    <li><a href="#">Gündem</a></li>
                 </ul>
             </div>
         </div>
